Close test frame delegated to continue running test thread

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,4 +13,4 @@ log4j.appender.console.layout.ConversionPattern=%d %p [%C{1}:%L] - %m%n
 #log4j.logger.org.nomin=ERROR
 #log4j.logger.org.springframework.web.servlet.view.jasperreports=INFO
 #log4j.logger.com.mchange.v2.c3p0=TRACE
-log4j.logger.com.cisidea=INFO
+log4j.logger.com.achmadns=INFO
