--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<compilerVersion>1.6</compilerVersion>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
@@ -196,6 +195,16 @@
 			<version>0.24.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-bus</artifactId>
+			<version>2.0.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-stream</artifactId>
+			<version>2.0.4.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-swing-testng</artifactId>
 			<version>2.1.1</version>
@@ -206,5 +215,10 @@
 			<artifactId>fest-reflect</artifactId>
 			<version>1.4.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.12</version>
+        </dependency>
 	</dependencies>
 </project>
